# ucilib

./: CMakeLists.txt  README.md
notes/: classes.txt  example1.txt  example2.txt  state_machine.txt  state_machine_examples.txt  synchronization.txt  uci_client_examples.txt  uci_definition.txt
options/: factory.cpp  factory.h  list.cpp  list.h  option.cpp  option.h  option_factory.cpp  option_factory.h  option_list.h
src/: uci_server.h
uci/: base.cpp  base.h  command.cpp  command.h  debug.cpp  engine.cpp  engine.h  go.cpp  go.h  gui.cpp  gui.h  info.cpp  info.h  option.h  params.cpp  params.h  setoption.h  uci.hpp  uci_base.cpp  uci_base.h  uci_client.cpp  uci_client.h  uci_server.cpp  uci_server.h
uci/commands/: bestmove.cpp  bestmove.h  command.cpp  command.h  command_base.h  commands.hpp  copyprotection.cpp  copyprotection.h  debug.cpp  debug.h  go.cpp  go.h  helpers.cpp  helpers.h  id.cpp  id.h  info.cpp  info.h  isready.h  option.cpp  option.h  ponderhit.h  position.cpp  position.h  quit.h  readyok.h  register.cpp  register.h  registration.cpp  registration.h  setoption.cpp  setoption.h  stop.h  uci.h  ucinewgame.h  uciok.h
uci/options/: list.cpp  list.h  option.cpp  option.h
uci/state_machines/: client.h  state_machine_base.cpp  state_machine_base.h
uci/states/: base.cpp  base.h  states.hpp
uci/states/client/: base.cpp  base.h  commit.cpp  info.cpp  init.cpp  init.h  new_game.cpp  new_position.cpp  options.cpp  search.cpp  start_up.cpp  wait.cpp  wait.h
uci/states/server/: base.cpp  commit.cpp  info.cpp  init.cpp  new_game.cpp  new_position.cpp  options.cpp  search.cpp  start_up.cpp  start_up.h  wait.cpp
